--- a/templates/base.html
+++ b/templates/base.html
@@ -263,7 +263,7 @@
                <a class="nav-link tooltip" href="/local_members" >
                  <div class="note-cont">
                    <img  class="note-icons" src="static/icons/camm_new_mem.png"   />
-                   <div style="height:15px;width:15px" class="new-num-bg general-flex"><span>{{user_no_base | length }}</span></div>
+                   <div style="height:15px;width:15px" class="new-num-bg general-flex"><span>{{user_no_base}}</span></div>
                    <span class="tooltiptext">View Members</span>
                  </div>
                </a>
@@ -369,9 +369,13 @@
       <!-- </div> -->
       <br>
     </div><br>
-    <div class="physical_addr">
+    <!-- <div class="physical_addr">
       <label>powered by: Tech Xolutions(TechX)</label><br>
       <label>info@techxololutions.com</label>
+    </div> -->
+    <div class="physical_addr general-flex">
+      <label>C2025</label><br> 
+      <label>All rights reserved</label>
     </div>
 
     <script src="static/js_script.js" ></script>
