--- a/templates/local_members.html
+++ b/templates/local_members.html
@@ -26,7 +26,7 @@
     <div id="contact-us" style="width:100%;margin:150px auto; padding:20px;border-radius: 20px;" class="border-spec">
         
                 <h5 style="color:coral;margin:auto 0;text-align:center"><span style="font-size: 20px;"></span><span style="font-size: 20px;color:black"></span>  
-                    <span style="color:rgb(107, 107, 107);margin:auto 0;text-align:center"><span style="font-size: 20px;">{{user_no_base|length}}</span> Users</span></h5>
+                    <span style="color:rgb(107, 107, 107);margin:auto 0;text-align:center"><span style="font-size: 20px;">{{user_no_base}}</span> Users</span></h5>
                     
                 <!-- <h5 style="color:rgb(107, 107, 107);margin:auto 0;text-align:center"><span style="font-size: 20px;">{{registered_children|length}}</span> Children </h5> -->
 
@@ -78,7 +78,7 @@
         <br>
         <div style="display: flex;gap:5px;background-color:;">
             <div style="width: 100%;background-color:;overflow:auto">
-                <h3 style="color:#641e1e">{{local}}, Registered Children ({{registered_children|length}})</h3>
+                <h3 style="color:#641e1e">{{local}}, Registered Children ({{registered_children}})</h3>
                 <table id="children" class="tftable" border="1">
                     <tr><th>Date</th><th>Name</th><th>Group</th><th>Structure</th><th>Parent</th><th>Proof</th><th>Local Church</th><th>Circuit</th><th>Region</th></tr>
                     {% for child in registered_children %}
