--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -436,8 +436,41 @@ body{
     box-sizing:border-box;
     font-family:Montserrat !important;
     animation:fade-anim 0.5s ease-in;
-    background: #f5f5f5 !important;
+
 }
+
+
+.bg-overlay {
+    background: linear-gradient( 35deg, rgba(255, 247, 245, 0), rgba(255, 242, 242,0.6), rgba(255, 247, 245, 0.1));
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-size: 300% 300%;
+    animation: gradient-animation 8s ease infinite;
+}
+
+#bottom-info label{
+    white-space: nowrap;
+    text-align: center;
+}
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+/* .gradient-animation {
+    background: linear-gradient(90deg, #ff7e5f, #feb47b, #86a8e7, #91eae4);
+} */
 
 .progress-cont{
     display:flex;
@@ -1500,7 +1533,6 @@ form{
     background-color: var(--main-color);
     position:relative;
     overflow:hidden;
-    z-index:;
     align-items: flex-start;
     justify-content: flex-start;
     margin:10px auto;
@@ -3534,8 +3566,6 @@ small{
     justify-content:flex-end;
     float:left;
     /* width:97%; */
-    //right:30px;
-    //top:60px;
 }
 
 
